Improved the Apec regex on publication date

--- a/app/views/App/Root/scrap.twig
+++ b/app/views/App/Root/scrap.twig
@@ -1,7 +1,5 @@
 {% extends "/layout.twig" %}
 
-<ul>
-    {% for item in content %}
-        <li>{{ item.result }}</li>
-    {% endfor %}
-</ul>
+{% for key,value in content %}
+    {{ value.result }}
+{% endfor %}
