--- a/app/views/App/Root/scrap.twig
+++ b/app/views/App/Root/scrap.twig
@@ -1,7 +1,5 @@
 {% extends "/layout.twig" %}
-
 {% block content %}
-    {% for key,value in content %}
-        {{ key }} = {{ value.result[1] }}<br/>
-    {% endfor %}
-{% endblock %}
+{% for key,value in content %}
+    {{ value.result }}
+{% endfor %}
