[stable] functionnal DB (online !). you must add a serverConfig.php file in Model in order to connect on your local server (or just push on the ftp) + added the first route + modified a few things on scrappers

--- a/app/views/App/Root/scrap.twig
+++ b/app/views/App/Root/scrap.twig
@@ -1,5 +1,7 @@
 {% extends "/layout.twig" %}
 
-{% for key,value in content %}
-    {{ value.result }}
-{% endfor %}
+{% block content %}
+    {% for key,value in content %}
+        {{ key }} = {{ value.result[1] }}<br/>
+    {% endfor %}
+{% endblock %}
